<resources>
    <string name="app_name">BOSM \'18</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="connection_error">Please check your connection!</string>
    <string name="Rs">\u20B9</string>

    <string-array name="red_wine">
        <item>#ff670729</item>
        <item>#ff7a0c2d</item>
        <item>#ff96092d</item>
        <item>#ffa10a37</item>
        <item>#ffbf013b</item>
    </string-array>
    <string name="simple_fragment_transition">sssssssssssssssssssssss</string>

    <string-array name="College">
        <item></item>
        <item>BITS PILANI</item>
        <item>BITS GOA</item>
        <item>BITS HYDERABAD</item>
        <item>IIT DELHI</item>
        <item>MANIPAL UNIVERSITY</item>
    </string-array>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <string name="title_simple_examples">Simple Examples</string>
    <string name="description_simple_examples">The following examples show the simplest Hover menus possible.  These examples use simple tab Views and only display text in their content screens.</string>
    <string name="title_dynamic_examples">Dynamic Examples</string>
    <string name="description_dynamic_examples">The following examples also use simple menus, but these menus change in a scripted fashion.  These demos illustrate what happens to Hover when various things in the menu change at runtime.</string>
    <string name="button_launch_hover_single_section">Launch Hover!</string>
    <string name="button_launch_hover_multi_sections">Launch Multiple Sections</string>
    <string name="button_launch_hover_foreground">Launch Hover in Foreground</string>
    <string name="button_launch_hover_changing_sections">Launch Changing Sections</string>
    <string name="button_launch_hover_reordering_sections">Launch Re-Ordering Sections</string>
    <string name="button_launch_hover_all_states">Launch All States Menu</string>
    <string name="button_launch_hover_changing_menus">Launch Changing Menus</string>
    <string name="button_launch_hover_menu_then_no_menu">Launch Menu, Then No Menu</string>


    <string name="para_1">Bosm Roulette is an app based betting event using which one can predict the results of a match before its start.</string>
    <string name="para_2">Each user is given a wallet balance of $200 in the beginning, using which one can bid on his favourite team.</string>
    <string name="h1">There are 2 types of bets : -</string>
    <string name="h1_P1">Normal Bet :</string>
    <string name="h1_P1_d">If a user bets $x on a particular match, if his prediction is correct, his wallet balance will increase by 2*x amount otherwise the balance will decrease by x/2 amount.</string>
    <string name="h1_P2">Power Bet :</string>
    <string name="h1_P2_d">If a user bets $x on a particular match, if his prediction is correct, his wallet balance will increase by 4*x amount.....\nBut if the user looses on that particular bid, he/she will lose that x amount, so be careful guys.\nThe Power Bet will be active once every 4 hours so use this on the best team.</string>
    <string name="h2">Earning Additional Points : -</string>
    <string name="h2_P1">Refer And Earn Policy :</string>
    <string name="h2_P1_d">Users can refer the app using the Share button in the side drawer.\nBoth sender and reciever will get $80.</string>
    <string name="h2_P2">Spin and Earn :</string>
    <string name="h2_P2_d">Try Your luck by spinning the wheel and earn additional bonus points once in half an hour.If win, $50 will be awarded</string>

</resources>
